feat: 발자국 시간 관련 초기 세팅

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -39,7 +39,7 @@
             android:background="@drawable/ripple_circle_white"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="@{() -> actionHandler.markFootPrint()}"
+            android:onClick="@{() -> actionHandler.loadMarkFootPrintBtn()}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_btn"
             app:layout_constraintBottom_toBottomOf="parent"
