refactor: 댕댕이 선택 바텀 시트로 전환

--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.group.select.DogSelectFragment">
+        tools:context=".presentation.ui.group.select.DogSelectBottomSheet">
         <View
             android:id="@+id/view_group_select_top_bar"
             app:layout_constraintTop_toTopOf="parent"
