--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.woowacourse.friendogly.presentation.ui.group.select.DogSelectViewModel" />
@@ -11,50 +12,66 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".presentation.ui.group.select.DogSelectBottomSheet">
+
         <View
             android:id="@+id/view_group_select_top_bar"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="56dp"/>
+            android:layout_height="56dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
-            android:layout_marginStart="12dp"
-            android:src="@drawable/ic_arrow_left"
-            app:layout_constraintTop_toTopOf="@id/view_group_select_top_bar"
-            app:layout_constraintBottom_toBottomOf="@id/view_group_select_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_group_select_top_bar"
             android:id="@+id/iv_group_select_back_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:text="@string/group_select_dog_subject"
-            app:layout_constraintTop_toTopOf="@id/view_group_select_top_bar"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="@id/view_group_select_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_group_select_top_bar"
             app:layout_constraintEnd_toEndOf="@id/view_group_select_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_group_select_top_bar" />
+
+        <TextView
+            android:id="@+id/tv_select_dog_title"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="@string/dog_selector_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_group_select_top_bar" />
+
+        <TextView
+            android:id="@+id/tv_select_dog_content"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/dog_select_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_select_dog_title" />
 
         <androidx.viewpager2.widget.ViewPager2
-            android:paddingHorizontal="30dp"
             android:id="@+id/vp_group_select_dog_list"
-            app:layout_constraintTop_toBottomOf="@id/view_group_select_top_bar"
-            app:layout_constraintBottom_toTopOf="@id/btn_group_select_commit"
             android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginVertical="15dp"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:layout_height="400dp"/>
+            android:paddingHorizontal="30dp"
+            app:layout_constraintBottom_toTopOf="@id/btn_group_select_commit"
+            app:layout_constraintTop_toBottomOf="@id/tv_select_dog_content" />
 
         <Button
             android:id="@+id/btn_group_select_commit"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="24dp"
             android:background="@drawable/rect_white_fill_radius10"
+            android:text="@string/group_select_commit"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list"
-            android:text="@string/group_select_commit" />
+            app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
