[AN] feat: 멍개 등록 UI,기능 구현 (#146)
Co-authored-by: 박예찬 <102402485+dpcks0509@users.noreply.github.com>

--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -7,8 +7,7 @@
 
         <variable
             name="group"
-            type="com.woowacourse.friendogly.presentation.ui.group.list.model.GroupUiModel" />
-
+            type="com.woowacourse.friendogly.presentation.ui.group.model.GroupUiModel" />
         <variable
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
@@ -159,13 +158,13 @@
                 tools:text="벼리 · 잠실6동 " />
 
             <TextView
-                app:groupDateTime="@{group.groupDate}"
                 android:id="@+id/tv_group_list_group_date"
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
+                app:groupDateTime="@{group.groupDate}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_group_list_user_list_icon"
