--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -5,10 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="participationFilter"
+            type="com.woowacourse.friendogly.presentation.ui.group.model.groupfilter.ParticipationFilter" />
 
         <variable
             name="groupFilterSelector"
-            type="com.woowacourse.friendogly.presentation.ui.group.list.model.GroupFilterSelector" />
+            type="com.woowacourse.friendogly.presentation.ui.group.model.GroupFilterSelector" />
 
         <variable
             name="actionHandler"
@@ -28,7 +31,7 @@
             layout="@layout/include_group_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:filterName="@{groupFilterSelector.participationFilter.filterName}"
+            app:filterName="@{participationFilter.filterName}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
