--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -336,6 +336,19 @@
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Orange.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/orange07</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Black.Size25" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
 
     <!--Profile Edit Text-->
     <style name="Theme.AppCompat.TextView.Profile.EditText.Contents" parent="@style/Widget.AppCompat.EditText">
@@ -353,4 +366,22 @@
         <item name="maxLines">1</item>
     </style>
 
+    <!--ADD Group Menu Text-->
+    <style name="group_add_custom_checkbox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="android:button">@null</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:drawableEnd">@drawable/sel_group_add_check_filter_menu</item>
+        <item name="android:background">@drawable/sel_group_background_filter_menu</item>
+        <item name="android:textColor">@drawable/sel_group_text_filter_menu</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_medium</item>
+        <item name="android:paddingHorizontal">15dp</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:layout_marginEnd">0dp</item>
+    </style>
+
+    <style name="group_add_custom_progressbar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progressbar_linear_progress</item>
+    </style>
 </resources>
