--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="actionHandler"
+            type="com.woowacourse.friendogly.presentation.ui.group.select.DogSelectActionHandler" />
         <variable
             name="vm"
             type="com.woowacourse.friendogly.presentation.ui.group.select.DogSelectViewModel" />
@@ -23,6 +25,7 @@
 
         <ImageView
             android:id="@+id/iv_group_select_back_button"
+            onSingleClick="@{()->actionHandler.cancelSelection()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
@@ -60,17 +63,20 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             android:paddingHorizontal="30dp"
-            app:layout_constraintBottom_toTopOf="@id/btn_group_select_commit"
+            app:layout_constraintBottom_toTopOf="@id/tv_group_select_commit"
             app:layout_constraintTop_toBottomOf="@id/tv_select_dog_content" />
 
-        <Button
-            android:id="@+id/btn_group_select_commit"
+        <TextView
+            android:id="@+id/tv_group_select_commit"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/rect_white_fill_radius10"
             android:text="@string/group_select_commit"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
+            android:backgroundTint="@color/orange05"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
     </androidx.constraintlayout.widget.ConstraintLayout>
