--- a/android/app/src/main/res/layout/bottom_sheet_foot_print.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_foot_print.xml
@@ -30,7 +30,7 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_woof_dog"
-                glide="@{vm.footPrintInfo.imageUrl}"
+                glide="@{vm.uiState.footPrintInfo.footprintImageUrl}"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="90dp"
@@ -43,7 +43,7 @@
             <TextView
                 android:id="@+id/tv_woof_dog_walking"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Gray10.Size18"
-                footPrintWalking="@{vm.footPrintInfo.name}"
+                footPrintWalking="@{vm.uiState.footPrintInfo.petName}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -62,7 +62,7 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{@string/woof_dog_age(vm.footPrintInfo.age)}"
+                android:text="@{vm.uiState.footPrintInfo.petAge}"
                 app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
@@ -77,7 +77,7 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{vm.footPrintInfo.size}"
+                android:text="@{vm.uiState.footPrintInfo.petSizeType}"
                 app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_gender"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_age"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
@@ -92,7 +92,7 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{vm.footPrintInfo.gender}"
+                android:text="@{vm.uiState.footPrintInfo.petGender}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_size"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
@@ -119,7 +119,7 @@
                 android:background="@drawable/rect_orange100_fill_12"
                 android:minHeight="80dp"
                 android:padding="15dp"
-                android:text="@{vm.footPrintInfo.description}"
+                android:text="@{vm.uiState.footPrintInfo.petDescription}"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_introduce"
                 tools:text="땡이는 사람을 좋아해요! 땡이를 보게 되면 말 걸어주세요!!" />
         </androidx.constraintlayout.widget.ConstraintLayout>
