refactor: FootPrint -> Footprint 이름 변경

--- a/android/app/src/main/res/layout/bottom_sheet_footprint.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_footprint.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.woowacourse.friendogly.presentation.ui.woof.footprint.FootPrintViewModel" />
+            type="com.woowacourse.friendogly.presentation.ui.woof.footprint.FootprintViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
