--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="group"
-            type="com.woowacourse.friendogly.presentation.ui.group.model.GroupUiModel" />
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListUiModel" />
         <variable
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
