feat: bottomSheet 구체화

--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -10,9 +10,15 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/Widget.Material3.BottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".presentation.ui.group.select.DogSelectBottomSheet">
+        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+            android:id="@+id/drag_handle_woof_foot_print"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view_group_select_top_bar"
