--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -7,13 +7,14 @@
 
         <variable
             name="group"
-            type="com.woowacourse.friendogly.presentation.ui.group.model.GroupUiModel" />
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListUiModel" />
         <variable
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        onSingleClick="@{()->actionHandler.loadGroup(group.groupId)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -25,12 +26,12 @@
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:background="@drawable/rect_orange100_fill_12"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:shapeAppearanceOverlay="@style/RoundBig"
             app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ll_group_list_main_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/RoundBig" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_group_list_main_content"
