--- a/android/app/src/main/res/layout/activity_group_detail.xml
+++ b/android/app/src/main/res/layout/activity_group_detail.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.ui.group.detail.GroupDetailFragment">
+    tools:context=".presentation.ui.group.detail.GroupDetailActivity">
 
     <data>
 
@@ -25,12 +25,15 @@
                 android:layout_height="0dp"
                 android:background="@color/black"
                 android:scaleType="centerCrop"
+                app:glide="@{vm.group.groupPoster}"
+                app:layout_constraintBottom_toTopOf="@+id/view_group_detail_top_bar"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                onSingleClick="@{()->vm.closeDetail()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -40,6 +43,7 @@
                 app:tint="@color/white" />
 
             <ImageView
+                onSingleClick="@{()->vm.openMenu()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -56,16 +60,22 @@
 
             <ImageView
                 android:id="@+id/iv_group_detail_user_image"
+                glide1000="@{vm.group.groupReaderImage}"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
+                android:background="@drawable/shape_indicator_active"
+                android:backgroundTint="@color/orange05"
                 android:src="@drawable/ic_dog"
                 app:layout_constraintBottom_toBottomOf="@id/view_group_detail_top_bar"
                 app:layout_constraintStart_toStartOf="@id/view_group_detail_top_bar"
-                app:layout_constraintTop_toTopOf="@id/view_group_detail_top_bar" />
+                app:layout_constraintTop_toTopOf="@id/view_group_detail_top_bar"
+                app:shapeAppearanceOverlay="@style/RoundBig" />
 
             <TextView
                 android:id="@+id/tv_group_detail_user_name"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:text="@{vm.group.groupLeader}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -82,6 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@id/view_group_detail_top_bar"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,8 +100,10 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_group_detail_user_name">
 
                 <TextView
+                    style="@style/Theme.AppCompat.TextView.Medium.Gray07.Size14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{vm.group.groupLocation}"
                     tools:text="잠실6동" />
 
                 <Space
@@ -99,8 +112,10 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    style="@style/Theme.AppCompat.TextView.Medium.Gray07.Size14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:groupDateTime="@{vm.group.groupDate}"
                     tools:text="1일 전" />
             </LinearLayout>
 
@@ -112,7 +127,6 @@
                 android:background="@color/gray04"
                 app:layout_constraintTop_toBottomOf="@id/view_group_detail_top_bar" />
 
-            <!--TODO:listitem 추가-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_group_detail_filter_list"
                 android:layout_width="match_parent"
@@ -120,30 +134,38 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@id/view_group_detail_line" />
+                app:layout_constraintTop_toBottomOf="@id/view_group_detail_line"
+                tools:listitem="@layout/item_filter" />
 
             <TextView
                 android:id="@+id/tv_group_detail_subject"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:ellipsize="end"
-                android:maxLines="1"
+                android:paddingTop="10dp"
+                android:text="@{vm.group.title}"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rcv_group_detail_filter_list"
-                tools:text="모임 이름이에요~" />
+                tools:text="모임 이름이에요~모임 이름이에요~모임 이름이에요~모임 이름이에요~" />
 
             <TextView
                 android:id="@+id/tv_group_detail_content"
+                style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:paddingTop="10dp"
+                android:text="@{vm.group.content}"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_group_detail_subject"
-                tools:text="모임 내용입니다." />
+                tools:text="모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다." />
 
             <TextView
                 android:id="@+id/tv_group_detail_user_list_subject"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -160,13 +182,15 @@
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@id/tv_group_detail_user_list_subject"
-                tools:listitem="@layout/item_detail_dog_profile" />
+                tools:listitem="@layout/item_detail_profile" />
 
             <TextView
                 android:id="@+id/tv_group_list_dog_list_subject"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:paddingTop="10dp"
                 android:text="@string/group_dog_list_subject"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
@@ -178,21 +202,24 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintTop_toBottomOf="@id/tv_group_list_dog_list_subject"
-                tools:listitem="@layout/item_detail_dog_profile" />
+                tools:listitem="@layout/item_detail_profile" />
 
-            <Button
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
+                onSingleClick="@{()->vm.selectDog()}"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/rect_white_fill_radius10"
+                android:backgroundTint="@color/orange05"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rcv_group_detail_dog_list"
-                tools:text="참여하기" />
+                android:text="@string/group_detail_participate_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </ScrollView>
 </layout>
