--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -63,5 +63,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/view_group_list_top_bar" />
 
+        <ImageButton
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/ripple_circle_white"
+            android:src="@drawable/ic_group_add_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
