--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -57,10 +57,12 @@
             app:layout_constraintTop_toTopOf="@id/view_group_list_top_bar" />
 
         <include
+            app:vm = "@{vm}"
             android:id="@+id/include_group_list_filter"
             layout="@layout/include_group_selector"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/view_group_list_top_bar" />
 
         <ImageButton
