--- a/android/app/src/main/res/layout/item_pet.xml
+++ b/android/app/src/main/res/layout/item_pet.xml
@@ -8,8 +8,8 @@
 
 
         <variable
-            name="dog"
-            type="com.woowacourse.friendogly.presentation.ui.mypage.Dog" />
+            name="pet"
+            type="com.woowacourse.friendogly.domain.model.Pet" />
 
 
         <variable
@@ -30,7 +30,7 @@
 
         <ImageView
             android:id="@+id/iv_dog_thumbnail"
-            urlToImage="@{dog.image}"
+            urlToImage="@{pet.imageUrl}"
             android:layout_width="200dp"
             android:layout_height="200dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:maxLines="1"
             android:paddingTop="30dp"
             android:paddingBottom="10dp"
-            android:text="@{dog.name}"
+            android:text="@{pet.name}"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/iv_dog_thumbnail"
             app:layout_constraintEnd_toEndOf="parent"
