--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="actionHandler"
-            type="com.woowacourse.friendogly.presentation.ui.woof.WoofActionHandler" />
+            name="vm"
+            type="com.woowacourse.friendogly.presentation.ui.woof.WoofViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +26,7 @@
             android:layout_height="52dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="42dp"
-            android:onClick="@{() -> actionHandler.changeLocationTrackingMode()}"
+            android:onClick="@{() -> vm.changeLocationTrackingMode()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,7 +39,7 @@
             android:background="@drawable/ripple_circle_white"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="@{() -> actionHandler.markFootPrint()}"
+            android:onClick="@{() -> vm.markFootPrint()}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_foot_print_btn"
             app:layout_constraintBottom_toBottomOf="parent"
